Move netlify.toml to repo root and update build paths for correct deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm run build"
-  publish = ".next"
+  command = "cd FlashLearnEMS command = "npm run build"command = "npm run build" npm run build"
+  publish = "FlashLearnEMS/.next"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
