--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "cd FlashLearnEMS command = "npm run build"command = "npm run build" npm run build"
+  command = "npm run build"
   publish = ".next"
 
 [[plugins]]
